#142 Page block double border bug fix

--- a/app/assets/code-club/stylesheets/components/_page-block.scss
+++ b/app/assets/code-club/stylesheets/components/_page-block.scss
@@ -3,6 +3,10 @@
   border-bottom: $border-size-base solid $grey-x-light;
   border-top:    $border-size-base solid $grey-x-light;
   @include padding($padding-x-large, 0);
+
+  + .c-page-block {
+    border-top: none;
+  }
 }
 
   .c-page-block--alt-block {
